--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "NeverEndingSprint.sln"
+    "dotnet.defaultSolution": "3D-Runner-Game.sln"
 }
